refactor: 정렬, 그루핑, 매핑 기능 책임 분리, DTO 통일 외