@@ -1,41 +1,41 @@
 package beforespring.yourfood.app.restaurant.service;
 
-import beforespring.yourfood.app.restaurant.domain.CuisineType;
+import static beforespring.yourfood.app.utils.RestaurantComparators.byDistance;
+import static beforespring.yourfood.app.utils.RestaurantComparators.byRatingAverage;
+import static beforespring.yourfood.app.utils.RestaurantComparators.sortBy;
+
 import beforespring.yourfood.app.restaurant.domain.Restaurant;
 import beforespring.yourfood.app.restaurant.domain.RestaurantQueryRepository;
 import beforespring.yourfood.app.restaurant.domain.RestaurantRepository;
 import beforespring.yourfood.app.restaurant.exception.RestaurantNotFoundException;
 import beforespring.yourfood.app.restaurant.service.dto.CuisineGroup;
-import beforespring.yourfood.app.restaurant.service.dto.RestaurantInfo;
 import beforespring.yourfood.app.restaurant.service.dto.RestaurantWithReviewDto;
 import beforespring.yourfood.app.restaurant.service.dto.ReviewDto;
 import beforespring.yourfood.app.review.domain.Review;
 import beforespring.yourfood.app.review.domain.ReviewRepository;
 import beforespring.yourfood.app.utils.Coordinates;
 import beforespring.yourfood.app.utils.OrderBy;
-import beforespring.yourfood.web.api.restaurant.response.RestaurantDto;
+import beforespring.yourfood.app.restaurant.service.dto.RestaurantDto;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.*;
-import java.util.stream.Collectors;
-
-import static beforespring.yourfood.app.utils.RestaurantComparators.byDistance;
-import static beforespring.yourfood.app.utils.RestaurantComparators.byRatingAverage;
 
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class RestaurantServiceImpl implements RestaurantService {
+
     private final RestaurantRepository restaurantRepository;
     private final ReviewRepository reviewRepository;
     private final RestaurantQueryRepository restaurantQueryRepository;
+    private final RestaurantGrouper restaurantGrouper;
 
     @Override
     @Transactional(readOnly = true)
     public RestaurantWithReviewDto getRestaurantDetail(Long restaurantId) {
-        Restaurant restaurant = restaurantRepository.findById(restaurantId).orElseThrow(RestaurantNotFoundException::new);
+        Restaurant restaurant = restaurantRepository.findById(restaurantId)
+                                    .orElseThrow(RestaurantNotFoundException::new);
         List<Review> reviews = reviewRepository.findByRestaurantId(restaurantId);
         List<ReviewDto> reviewDtos = ReviewDto.mapReviewsToReviewDtos(reviews);
 
@@ -43,75 +43,48 @@ public class RestaurantServiceImpl implements RestaurantService {
     }
 
     @Override
-    public List<Restaurant> getRestaurantsByRating(boolean descendingOrder, Coordinates coordinates, int rangeInMeter) {
-        List<Restaurant> restaurantsInLocation = restaurantQueryRepository.findAllWithin(coordinates, rangeInMeter);
+    public List<Restaurant> getRestaurantsByRating(boolean descendingOrder, Coordinates coordinates,
+        int rangeInMeter) {
+        List<Restaurant> restaurantsInLocation = restaurantQueryRepository.findAllWithin(
+            coordinates, rangeInMeter);
         // 평점순 정렬
         restaurantsInLocation.sort(byRatingAverage(descendingOrder));
         return restaurantsInLocation;
     }
 
     @Override
-    public List<Restaurant> getRestaurantsByDistance(boolean descendingOrder, Coordinates coordinates, int rangeInMeter) {
-        List<Restaurant> restaurantsInLocation = restaurantQueryRepository.findAllWithin(coordinates, rangeInMeter);
+    public List<Restaurant> getRestaurantsByDistance(boolean descendingOrder,
+        Coordinates coordinates, int rangeInMeter) {
+        List<Restaurant> restaurantsInLocation = restaurantQueryRepository.findAllWithin(
+            coordinates, rangeInMeter);
         // 거리순 정렬
         restaurantsInLocation.sort(byDistance(descendingOrder, coordinates));
         return restaurantsInLocation;
     }
 
     @Override
-    public List<RestaurantDto> getRestaurants(OrderBy orderBy, boolean descendingOrder, Coordinates coordinates, int rangeInMeter) {
-        List<Restaurant> restaurantsInLocation = new ArrayList<>(restaurantQueryRepository.findAllWithin(coordinates, rangeInMeter));
-
-        restaurantsInLocation.sort(
-            (orderBy == OrderBy.RATING) ?
-                byRatingAverage(descendingOrder) :
-                byDistance(descendingOrder, coordinates)
-        );
-
-        return restaurantsInLocation.stream()
-                   .map(restaurant -> new RestaurantDto(
-                       restaurant.getId(),
-                       restaurant.getName(),
-                       restaurant.getDescription(),
-                       restaurant.getAddress(),
-                       restaurant.getCuisineType(),
-                       restaurant.getRating()
-                   ))
-                   .collect(Collectors.toList());
+    public List<RestaurantDto> getRestaurants(
+        OrderBy orderBy,
+        boolean descendingOrder,
+        Coordinates coordinates,
+        int rangeInMeter
+    ) {
+        return restaurantQueryRepository
+                   .findAllWithin(coordinates, rangeInMeter)
+                   .stream()
+                   .sorted(sortBy(orderBy, descendingOrder, coordinates))
+                   .map(RestaurantDto::mapFrom)
+                   .toList();
     }
 
     @Override
-    public List<CuisineGroup> searchCuisineInfoByLocationAndRange(Coordinates currentCoords, int rangeInMeters) {
-        List<Restaurant> allWithin = restaurantQueryRepository.findAllWithin(currentCoords, rangeInMeters);
-
-        Map<CuisineType, List<Restaurant>> restaurantsByCuisineType = groupRestaurantsByCuisineType(allWithin);
-
-        return restaurantsByCuisineType.entrySet().stream()
-            .map(this::createCuisineGroup)
-            .collect(Collectors.toList());
+    public List<CuisineGroup> searchCuisineInfoByLocationAndRange(
+        Coordinates currentCoords,
+        int rangeInMeters
+    ) {
+        return restaurantGrouper.groupByCuisineGroup(
+            getRestaurants(null, false, currentCoords, rangeInMeters));
     }
 
-    /**
-     * CuisineType 에 따라 맛집을 그룹화
-     */
-    private Map<CuisineType, List<Restaurant>> groupRestaurantsByCuisineType(List<Restaurant> restaurants) {
-        Map<CuisineType, List<Restaurant>> restaurantsByCuisineType = new HashMap<>();
-
-        restaurants.forEach(restaurant -> restaurant.getCuisineType().forEach(cuisineType -> restaurantsByCuisineType
-            .computeIfAbsent(cuisineType, k -> new ArrayList<>())
-            .add(restaurant)));
-
-        return restaurantsByCuisineType;
-    }
-
-    private CuisineGroup createCuisineGroup(Map.Entry<CuisineType, List<Restaurant>> entry) {
-        CuisineType cuisineType = entry.getKey();
-        List<RestaurantInfo> restaurantInfos = entry.getValue().stream()
-            .sorted(Comparator.comparing(Restaurant::getRating).reversed())
-            .limit(5)
-            .map(RestaurantInfo::createFromRestaurant)
-            .collect(Collectors.toList());
-        return new CuisineGroup(cuisineType, restaurantInfos);
-    }
 }
 
